2013-07-17  Dario Rodriguez <dario@artica.es>

        * include/integria_cron.php,
        include/functions.php,
        operation/leads/lead_mail.php,
        integria_db.sql,
        extras/migrate.sql: Added CC parameter to pending
        mail queue, and modified lead email to send a
        specific subject to manage them like incident emails.

2013-07-16  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* include/functions_tasks.php: Added the function
	"tasks_print_tree", that prints the base of the
	tree of the new tasks tree view.
	
	* include/js/integria_projects.js: New file. Added
	the function "loadTasksSubTree", that makes possible
	the use of the tasks tree view.
	
	* integria/operation/projects/task.php: Added a tree
	view of tasks. The old tasks view can be showed with
	"clean_output=1".
	
	* operation/users/user_spare_workunit.php: Fixed a
	bug related with the datepicker.
	
	* operation/workorders/wo.php: Changed the icons of
	"My WO's" and "My Delegated WO's". Some improvements
	on the validation.

2013-07-16  Dario Rodriguez <dario@artica.es>

	* integria_db.sql: Fixed some problems creating
	database.

2013-07-16  Vanessa Gil <vanessa.gil@artica.es>
	
	* integria_db.sql
	  extras/migrate.sql: Changed session system.

	* include/load_session.php: Added file.

2013-07-16  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/functions_crm.php
	  operation/leads/lead_detail.php: Added
	lead statistics.

	* operation/leads/lead_statistics.php: Added file.

2013-07-15  Sancho Lerena <slerena@artica.es>

	* include/functions_config.php,
	include/config_process.php: Added code to force session
	timeout to parameters in setup.

	* integria_demo.sql: Fixed minor problem with demo data.

	* godmode/setup/setup.php,
	godmode/setup/setup_auth.php: Added new setup parameter
	to define session timeout.

2013-07-15  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/functions_crm.php
	  operation/companies/company_detail.php: Added
	company statistics.
