@@ -43,11 +43,13 @@ if ($send) {
 		echo "<h3 class='suc'>".__('Mail queued')."</h3>";
 
 		$cc = $config["mail_from"];
+		
+		$subject_mail = "[Lead#$id] " . $subject;
 
-		integria_sendmail ($to, $subject, $mail, false, "", $from, true, $cc);
+		integria_sendmail ($to, $subject_mail, $mail, false, "", $from, true, $cc);
 
 		if ($cco != "")
-			integria_sendmail ($cco, $subject, $mail, false, "", $from, true);
+			integria_sendmail ($cco, $subject_mail, $mail, false, "", $from, true);
 
 		// Lead update
 		if ($lead["progress"] == 0 ){
@@ -77,7 +79,6 @@ if ($send) {
 
 
 // Mark with case ID
-$subject = "[Lead#$id] " . $subject;
 
 // Replace mail macros
 /*_DEST_NAME_ -> Lead fullname
@@ -130,10 +131,14 @@ $table->colspan[2][0] = 3;
 $table->colspan[1][0] = 3;
 $table->colspan[3][0] = 3;
 
+if (!$subject) {
+	$subject = __("Commercial Information");
+}
+
 $table->data[0][0] = print_input_text ("from", $from, "", 30, 100, true, __('From'));
 $table->data[0][1] = print_input_text ("to", $to, "", 30, 100, true, __('To'));
 $table->data[0][2] = print_input_text ("cco", $cco, "", 30, 100, true, __('Send a copy to'));
-$table->data[1][0] = print_input_text ("subject", $subject, "", 80, 100, true, __('Subject'));
+$table->data[1][0] = '<label id="label-text-subject" for="text-subject">'.__("Subject").'</label> [Lead#'.$id.']&nbsp;'.print_input_text ("subject", $subject, "", 80, 100, true);
 $table->data[2][0] = print_textarea ("mail", 10, 1, $mail, 'style="height:350px;"', true, __('E-mail'));
 $table->data[3][0] = print_textarea ("last_mail", 10, 1, $last_email, 'style="height:350px;"', true, __('Last E-mail'));
 
